# MCPanel-CLI

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
mcpanel/: __init__.py  backup.py  buildtools.py  cli.py  config.py  http.py  paths.py  ping.py  plugins.py  profiles.py  render.py  runstate.py  servers.py  supervisor.py  system.py  themes.py  tui.py  util.py  versions.py
mcpanel/bundled_themes/bright-slate/: theme.css  theme.json
mcpanel/bundled_themes/dark-slate/: theme.css  theme.json
